# evaluation-metrics

./: .gitignore  .pre-commit-config.yaml  BALAM_SETUP.md  CHANGELOG.md  LICENSE.txt  NIAGARA_TESTING.md  README.md  branin_campaign.py  branin_campaign_demonstration.py  collect_cluster_results.py  copilot-setup-steps.yml  evaluation_metrics.py  full_plot_viewer.html  latest_plots_viewer.html  plot_viewer.html  pyproject.toml  run_balam_benchmark.py  simple_niagara_test.py  ssh_with_duo.py  submit_balam_job.py  test_basic.py  test_benchmark_standalone.py  test_framework.py  test_module.py  test_plotting.py
.github/: copilot-instructions.md
.github/actions/setup/: action.yaml
.github/workflows/: branin_campaigns_smoke_test.yaml  code_quality.yaml  copilot-setup-steps.yml
notebooks/: hartmann_singletaskGP.md
scripts/: CHANGES_SUMMARY.md  README.md  README_branin_campaigns.md  apptainer_ax_niagara.py  ax_niagara_clean.py  ax_niagara_comprehensive.py  ax_platform.def  batch_optimization_campaigns.py  benchmark.py  branin_repeat_campaigns.py  combine_branin_parallel_results.py  comprehensive_50_strategies.sh  fix_composite_plot.py  niagara_ax_final.py  niagara_simple_test.py  niagara_test_simple.py  oneliner_niagara.sh  optimization_campaigns.py  setup_apptainer_niagara.md  setup_ax_niagara.sh  setup_comprehensive_niagara.sh  simple_test_campaign.py  single_optimization_campaign.py  smoke_test_branin_campaigns.py  submit_balam.py  submit_balam_optimization.sh  submit_niagara_test.sh  submit_test_job.py  test_apptainer_niagara.py  test_enhanced_campaigns.py  test_function.py
scripts/bo_benchmarks/: NIAGARA_NOTES.md  benchmark_functions.py  niagara_submitit.py  niagara_test_job.py  requirements.txt  test_local.py
scripts/bo_benchmarks/demonstrations/: branin_campaign_10_repeat_fixed.py  branin_campaign_averaged_results.py  branin_campaign_demonstration.py  branin_campaign_demonstration_results.html  branin_campaign_simple_averaged.py
scripts/branin_exhaustive_evaluation_results/run_20251001_080810/: exhaustive_evaluation_results.json  intermediate_results_init_10.json  (+28 more)
scripts/branin_repeat_campaign_results/: campaign_summary.json
src/gpcheck/: __init__.py  benchmark.py
tests/: COPILOT_TEST_README.md  conftest.py  run_copilot_test.py  test_benchmark.py  test_copilot_agent.py  test_data.py  test_integration.py  test_metrics.py  test_models.py  test_visualization.py
(+446 files in other folders)
